$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-14 (opened Feb 24, 2009)

	* density and densityplot: new methods for "oecosimu" objects.

	* as.ts.oecosimu: new function for applying time series methods
	for sequential null models ("swap", "tswap", "abuswap").

	* metaMDSrotate: a new function to rotate metaMDS configuration so
	that the first axis is parallel with a continuous site variable.
	
	* as.ts.permat: extracts summary statistics from 'permat' objects
	as time series, to use for time series diagnostics.

	* permatswap: two new methods (under "abuswap") added based on the
	paper of Hardy 2008 (J Ecol 96, 914-926). These preserve row *and*
	colunm occurrences, and row *or* column sums at the same
	time. Thus these complement the methods available in vegan. Uses C
	code (not thoroughly tested yet). Needs some more work, and
	documentation (examples and reference in Rd file).

Version 1.16-13 (closed Feb 24, 2009)

	* anova.cca: documented the 'cutoff' argument for by = "axis".

	* text.procrustes: added text() function for procrustes() result plots.

	* rad.null: failed with family = gaussian and Gamma.

	* simulate.rda: new method to simulate responses with random error
	for an rda() result object. The function uses Normal error, and
	estimates the sd separately for each species from their rda
	residuals. Normal error is justified by least squares fitting in
	rda. This could be made to use permutations of residuals. Not yet
	implemented for cca or capscale results. For cca we -- at least --
	need to handle weights, and the capscale result would be rda
	result, since the method cannot be directly implemented for
	dissimilarities. The function was triggered by Ben Bolker's email
	to R-devel mainling list
	https://stat.ethz.ch/pipermail/r-devel/2009-February/052116.html
	
Version 1.16-12 (closed Feb 15, 2009)

	* anova.ccabyaxis: gained keyword 'cutoff' (defaults 1) to break